# ELANprac5

./: CMakeLists.txt
src/: main.cpp
src/Apps/: MainApp.h
src/Apps/Popups/: DeleteButtonPopupApp.h  DeleteZerosButtonPopupApp.h  InsertButtonPopupApp.h  InsertSubstringButtonPopupApp.h  RemoveInBraceButtonPopupApp.h  RemoveLowerButtonPopupApp.h  ReplaceAllButtonPopupApp.h  ReplaceCharacterButtonPopupApp.h  ReplaceStarByPlusButtonPopupApp.h
src/Apps/Popups/src/: DeleteButtonPopupApp.cpp  DeleteZerosButtonPopupApp.cpp  InsertButtonPopupApp.cpp  InsertSubstringButtonPopupApp.cpp  RemoveInBraceButtonPopupApp.cpp  RemoveLowerButtonPopupApp.cpp  ReplaceAllButtonPopupApp.cpp  ReplaceCharacterButtonPopupApp.cpp  ReplaceStarByPlusButtonPopupApp.cpp
src/Apps/src/: MainApp.cpp
src/Designs/: MainDesign.h
src/Designs/Popups/: DeleteButtonPopupDesign.h  DeleteZerosButtonPopupDesign.h  InsertButtonPopupDesign.h  InsertSubstringButtonPopupDesign.h  RemoveInBraceButtonPopupDesign.h  RemoveLowerButtonPopupDesign.h  ReplaceAllButtonPopupDesign.h  ReplaceCharacterButtonPopupDesign.h  ReplaceStarByPlusButtonPopupDesign.h
src/Designs/Popups/src/: DeleteButtonPopupDesign.cpp  DeleteZerosButtonPopupDesign.cpp  InsertButtonPopupDesign.cpp  InsertSubstringButtonPopupDesign.cpp  RemoveInBraceButtonPopupDesign.cpp  RemoveLowerButtonPopupDesign.cpp  ReplaceAllButtonPopupDesign.cpp  ReplaceCharacterButtonPopupDesign.cpp  ReplaceStarByPlusButtonPopupDesign.cpp
src/Designs/src/: MainDesign.cpp
src/Engine/: TextLabelAdapter.h
src/Engine/src/: TextLabelAdapter.cpp
